--- a/css/styles.css
+++ b/css/styles.css
@@ -288,7 +288,6 @@ body.light-theme{
 }
 .home_data{
   margin-top: 3rem;
-  text-align: ;
 }
 .home_greeting,
 .home_education{
@@ -312,12 +311,9 @@ body.light-theme{
 }
 .home_handle{
   justify-self: center;
-  width: 190px;
-  height: 293px;
-  background: linear-gradient(180deg,
-   hsla(var(--first-hue), var(--sat), var(--lig), 1),
-   hsla(var(--first-hue), var(--sat), var(--lig), .2) 
-  );
+  width: 100px;
+  height: 100px;
+
   
 }
 .home_buttons{
@@ -626,7 +622,7 @@ body.light-theme{
 /*=============== TESTIMONIAL ===============*/
 
 
-/* Swiper class */
+/* Swipe class */
 
 
 /*=============== CONTACT ===============*/
